--- a/package.json
+++ b/package.json
@@ -24,5 +24,15 @@
   "dependencies": {
     "@stencil/core": "^2.0.1"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "husky": "^4.3.0",
+    "prettier": "2.1.1",
+    "pretty-quick": "^3.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  }
 }
