--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@stencil/postcss": "^1.0.1",
+    "@stencil/sass": "^1.3.2",
+    "autoprefixer": "^9.8.6",
     "husky": "^4.3.0",
     "prettier": "2.1.1",
     "pretty-quick": "^3.0.1"
