--- a/package.json
+++ b/package.json
@@ -28,10 +28,15 @@
   "devDependencies": {
     "@stencil/postcss": "^1.0.1",
     "@stencil/sass": "^1.3.2",
+    "@types/jest": "^26.0.12",
+    "@types/puppeteer": "^3.0.1",
     "autoprefixer": "^9.8.6",
     "husky": "^4.3.0",
+    "jest": "^26.4.2",
+    "jest-cli": "^26.4.2",
     "prettier": "2.1.1",
-    "pretty-quick": "^3.0.1"
+    "pretty-quick": "^3.0.1",
+    "puppeteer": "^5.2.1"
   },
   "husky": {
     "hooks": {
