--- a/package.json
+++ b/package.json
@@ -16,27 +16,37 @@
   ],
   "scripts": {
     "build": "stencil build --docs",
+    "build.watch": "stencil build --watch",
     "start": "stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e --silent",
     "test.watch": "stencil test --spec --e2e --watchAll",
-    "generate": "stencil generate"
+    "generate": "stencil generate",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@stencil/core": "^2.0.1"
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.11.6",
     "@stencil/postcss": "^1.0.1",
     "@stencil/sass": "^1.3.2",
+    "@storybook/addon-actions": "^6.0.21",
+    "@storybook/addon-essentials": "^6.0.21",
+    "@storybook/addon-links": "^6.0.21",
+    "@storybook/html": "^6.0.21",
     "@types/jest": "^26.0.12",
     "@types/puppeteer": "^3.0.1",
     "autoprefixer": "^9.8.6",
+    "babel-loader": "^8.1.0",
     "husky": "^4.3.0",
     "jest": "^26.4.2",
     "jest-cli": "^26.4.2",
     "prettier": "2.1.1",
     "pretty-quick": "^3.0.1",
-    "puppeteer": "^5.2.1"
+    "puppeteer": "^5.2.1",
+    "react-is": "^16.13.1"
   },
   "husky": {
     "hooks": {
