feat: build static storybook to doc

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "npm run build && build-storybook -s dist/ -o docs/"
   },
   "dependencies": {
     "@stencil/core": "^2.0.1"
