--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@owlly/e-collecting",
   "version": "0.0.1",
+  "private": false,
   "description": "🦉 owlly enables the secure and easy electronic signing, validation and counting of popular initiatives and referendums for campaign platforms and offers a holistic e-collecting approach for Switzerland.",
   "main": "dist/index.cjs.js",
   "module": "dist/custom-elements/index.js",
