docs: storybooks knobs are going to be deprecated in v7
in addition, this allow use to use the "controls" tab instead of "knobs" which is more comprehensive

--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "build-storybook": "npm run build && build-storybook -s dist/ -o docs/"
   },
   "dependencies": {
-    "@stencil/core": "^2.0.1",
-    "@storybook/addon-knobs": "^6.0.22"
+    "@stencil/core": "^2.0.1"
   },
   "license": "MIT",
   "devDependencies": {
