--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@storybook/addon-actions": "^6.1.1",
     "@storybook/addon-essentials": "^6.1.1",
     "@storybook/addon-links": "^6.1.1",
+    "@storybook/addons": "^6.1.1",
     "@storybook/html": "^6.1.1",
+    "@storybook/theming": "^6.1.1",
     "@types/jest": "^26.0.12",
     "@types/puppeteer": "^3.0.1",
     "autoprefixer": "^9.8.6",
